# RomPatcher

./: .gitignore  README.md  RomPatcher.spec  app.py  build_windows.ps1  pyproject.toml
.github/workflows/: build-release.yml
installer/: RomPatcher.iss
scripts/: bump_version.py
src/rompatcher/: __init__.py  binary.py  checksums.py  cli.py  core.py  creator.py  dependencies.py  exceptions.py  gui.py  headers.py  models.py  n64.py  updater.py  version.py
src/rompatcher/formats/: __init__.py  aps.py  base.py  bps.py  external.py  ips.py  ppf.py  rup.py  ups.py
tests/: test_cli.py  test_formats.py  test_gui.py  test_updater.py  test_utilities.py
