[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rompatcher-desktop"
version = "1.1.1"
description = "Patcher Windows autonome pour appliquer, créer, analyser et convertir des patchs de ROMs et de binaires."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Marc" }]
dependencies = [
    "windnd>=1.0.7; platform_system == 'Windows'",
]

[project.scripts]
rompatcher = "rompatcher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
